[package]
name = "flip-ui"
version = "0.1.0"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Rust integration for handling and compiling the UI built via the UI Flip UI Builder"
keywords = ["json", "no_std", "macros"]
categories = ["no-std", "gui", "embedded"]
repository = "https://github.com/flip-ui/flip-ui-rs"
readme = "README.md"
license = "MIT"

[lib]
harness = false

[dependencies]
flip-ui-macro = { path = "flip-ui-macro" }
flipperzero = { git = "https://github.com/flipperzero-rs/flipperzero" }

[dev-dependencies]
flipperzero_rt = { git = "https://github.com/flipperzero-rs/flipperzero", package = "flipperzero-rt" }
flipperzero_test = { git = "https://github.com/flipperzero-rs/flipperzero", package = "flipperzero-test" }

[[test]]
name = "test"
harness = false
