[package]
name = "flip-ui"
version = "0.1.3"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Rust integration for handling and compiling the UI built via the UI Flip UI Builder"
keywords = ["json", "no_std", "macros"]
categories = ["no-std", "gui", "embedded"]
rust-version = "1.70.0"
repository = "https://github.com/flip-ui/flip-ui-rs"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []

[lib]
harness = false

[dependencies]
flip-ui-macro = { path = "macro", version = "0.1.3" }
flipperzero = { git = "https://github.com/flipperzero-rs/flipperzero", version = "0.11.0" }

[dev-dependencies]
flipperzero_rt = { git = "https://github.com/flipperzero-rs/flipperzero", package = "flipperzero-rt", version = "0.11.0" }
flipperzero_test = { git = "https://github.com/flipperzero-rs/flipperzero", package = "flipperzero-test", version = "0.11.0" }

[[test]]
name = "test"
harness = false
