[package]
name = "flip-ui-macro"
version = "0.1.3"
edition = "2021"
description = "Procedural macros for flip-ui"
rust-version = "1.70.0"
repository = "https://github.com/flip-ui/flip-ui-rs"
readme = "../README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
syn = { version = "2.0.62", features = ["full"] }
proc-macro2 = "1.0"
